create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1555,7 +1555,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #0f7699;
 }
 .cid-qTkzRZLJNu button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1780,7 +1780,7 @@ body {
 }
 .cid-qTkzRZLJNu .nav-link:hover,
 .cid-qTkzRZLJNu .dropdown-item:hover {
-  color: #ffffff !important;
+  color: #0f7699 !important;
 }
 .cid-roHVoe1kQN {
   padding-top: 90px;
@@ -2040,7 +2040,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #0f7699;
 }
 .cid-qTkzRZLJNu button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2265,7 +2265,7 @@ body {
 }
 .cid-qTkzRZLJNu .nav-link:hover,
 .cid-qTkzRZLJNu .dropdown-item:hover {
-  color: #ffffff !important;
+  color: #0f7699 !important;
 }
 .cid-roHVoe1kQN {
   padding-top: 90px;
@@ -2363,98 +2363,6 @@ body {
 .cid-roOiCYWSnH .card-title {
   text-align: center;
   color: #cc2952;
-}
-.cid-roPOiOBqrR {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
-}
-.cid-roPOiOBqrR .mbr-section-subtitle {
-  color: #073b4c;
-  font-weight: 300;
-}
-.cid-roPOiOBqrR .media-container-row {
-  word-wrap: break-word;
-  word-break: break-word;
-  align-items: stretch;
-  -webkit-align-items: stretch;
-}
-.cid-roPOiOBqrR .card_cont {
-  -o-transition: all .5s;
-  -ms-transition: all .5s;
-  -moz-transition: all .5s;
-  -webkit-transition: all .5s;
-  transition: all .5s;
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  text-align: center;
-  background-color: #eee;
-}
-.cid-roPOiOBqrR .card-front {
-  z-index: 2;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.cid-roPOiOBqrR .card-front img {
-  height: 100%;
-  min-width: 100%;
-  width: auto;
-}
-.cid-roPOiOBqrR .card_back {
-  width: 100%;
-  height: 100%;
-  padding: 30px 30px;
-  color: #ffffff;
-  background-color: #55b4d4;
-  z-index: 1;
-  margin: 0;
-  text-align: center;
-  overflow: hidden;
-  -o-transform: rotateY(-180deg);
-  -ms-transform: rotateY(-180deg);
-  -moz-transform: rotateY(-180deg);
-  -webkit-transform: rotateY(-180deg);
-  transform: rotateY(-180deg);
-}
-.cid-roPOiOBqrR .card {
-  min-height: 300px;
-}
-.cid-roPOiOBqrR .card:hover .card-front {
-  z-index: 1;
-  -o-transform: rotateY(180deg);
-  -ms-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-}
-.cid-roPOiOBqrR .card:hover .card_back {
-  z-index: 2;
-  -o-transform: rotateY(0deg);
-  -ms-transform: rotateY(0deg);
-  -moz-transform: rotateY(0deg);
-  -webkit-transform: rotateY(0deg);
-  transform: rotateY(0deg);
-}
-.cid-roPOiOBqrR .builderCard .card_back {
-  border-bottom-left-radius: 100px;
-}
-.cid-roPOiOBqrR .builderCard .card_cont {
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidd;
-  -moz-backface-visibility: visible;
-  -webkit-backface-visibility: visible;
-  backface-visibility: visible;
-}
-.cid-roPOiOBqrR .mbr-section-title B {
-  color: #0f7699;
 }
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
@@ -2618,7 +2526,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #0f7699;
 }
 .cid-qTkzRZLJNu button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2843,22 +2751,7 @@ body {
 }
 .cid-qTkzRZLJNu .nav-link:hover,
 .cid-qTkzRZLJNu .dropdown-item:hover {
-  color: #ffffff !important;
-}
-.cid-rog5cfv25E {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
-}
-.cid-rog5cfv25E P {
-  color: #767676;
-}
-.cid-rog5cfv25E H1 {
-  color: #0f7699;
-}
-.cid-rog5cfv25E .mbr-text,
-.cid-rog5cfv25E .mbr-section-btn {
-  color: #073b4c;
+  color: #0f7699 !important;
 }
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
@@ -3322,101 +3215,6 @@ body {
     -webkit-justify-content: center;
   }
 }
-.cid-roPOiOBqrR {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
-}
-.cid-roPOiOBqrR .mbr-section-subtitle {
-  color: #073b4c;
-  font-weight: 300;
-}
-.cid-roPOiOBqrR .media-container-row {
-  word-wrap: break-word;
-  word-break: break-word;
-  align-items: stretch;
-  -webkit-align-items: stretch;
-}
-.cid-roPOiOBqrR .card_cont {
-  -o-transition: all .5s;
-  -ms-transition: all .5s;
-  -moz-transition: all .5s;
-  -webkit-transition: all .5s;
-  transition: all .5s;
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  text-align: center;
-  background-color: #eee;
-}
-.cid-roPOiOBqrR .card-front {
-  z-index: 2;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.cid-roPOiOBqrR .card-front img {
-  height: 100%;
-  min-width: 100%;
-  width: auto;
-}
-.cid-roPOiOBqrR .card_back {
-  width: 100%;
-  height: 100%;
-  padding: 30px 30px;
-  color: #ffffff;
-  background-color: #55b4d4;
-  z-index: 1;
-  margin: 0;
-  text-align: center;
-  overflow: hidden;
-  -o-transform: rotateY(-180deg);
-  -ms-transform: rotateY(-180deg);
-  -moz-transform: rotateY(-180deg);
-  -webkit-transform: rotateY(-180deg);
-  transform: rotateY(-180deg);
-}
-.cid-roPOiOBqrR .card {
-  min-height: 300px;
-}
-.cid-roPOiOBqrR .card:hover .card-front {
-  z-index: 1;
-  -o-transform: rotateY(180deg);
-  -ms-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-}
-.cid-roPOiOBqrR .card:hover .card_back {
-  z-index: 2;
-  -o-transform: rotateY(0deg);
-  -ms-transform: rotateY(0deg);
-  -moz-transform: rotateY(0deg);
-  -webkit-transform: rotateY(0deg);
-  transform: rotateY(0deg);
-}
-.cid-roPOiOBqrR .builderCard .card_back {
-  border-bottom-left-radius: 100px;
-}
-.cid-roPOiOBqrR .builderCard .card_cont {
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidd;
-  -moz-backface-visibility: visible;
-  -webkit-backface-visibility: visible;
-  backface-visibility: visible;
-}
-.cid-roPOiOBqrR .mbr-section-title B {
-  color: #0f7699;
-}
-.cid-roPOiOBqrR .mbr-section-title {
-  color: #0f7699;
-}
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
   background: #0f7699;
@@ -3579,7 +3377,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #0f7699;
 }
 .cid-qTkzRZLJNu button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3804,22 +3602,7 @@ body {
 }
 .cid-qTkzRZLJNu .nav-link:hover,
 .cid-qTkzRZLJNu .dropdown-item:hover {
-  color: #ffffff !important;
-}
-.cid-rog5cfv25E {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
-}
-.cid-rog5cfv25E P {
-  color: #767676;
-}
-.cid-rog5cfv25E H1 {
-  color: #0f7699;
-}
-.cid-rog5cfv25E .mbr-text,
-.cid-rog5cfv25E .mbr-section-btn {
-  color: #073b4c;
+  color: #0f7699 !important;
 }
 .cid-rog5cfv25E {
   padding-top: 90px;
@@ -4093,7 +3876,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #0f7699;
 }
 .cid-qTkzRZLJNu button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4318,7 +4101,7 @@ body {
 }
 .cid-qTkzRZLJNu .nav-link:hover,
 .cid-qTkzRZLJNu .dropdown-item:hover {
-  color: #ffffff !important;
+  color: #0f7699 !important;
 }
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
@@ -4482,7 +4265,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #0f7699;
 }
 .cid-qTkzRZLJNu button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4707,7 +4490,7 @@ body {
 }
 .cid-qTkzRZLJNu .nav-link:hover,
 .cid-qTkzRZLJNu .dropdown-item:hover {
-  color: #ffffff !important;
+  color: #0f7699 !important;
 }
 .cid-roHVoe1kQN {
   padding-top: 90px;
@@ -4758,98 +4541,6 @@ body {
   color: #cc2952;
   text-align: center;
 }
-.cid-roPOiOBqrR {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
-}
-.cid-roPOiOBqrR .mbr-section-subtitle {
-  color: #073b4c;
-  font-weight: 300;
-}
-.cid-roPOiOBqrR .media-container-row {
-  word-wrap: break-word;
-  word-break: break-word;
-  align-items: stretch;
-  -webkit-align-items: stretch;
-}
-.cid-roPOiOBqrR .card_cont {
-  -o-transition: all .5s;
-  -ms-transition: all .5s;
-  -moz-transition: all .5s;
-  -webkit-transition: all .5s;
-  transition: all .5s;
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  text-align: center;
-  background-color: #eee;
-}
-.cid-roPOiOBqrR .card-front {
-  z-index: 2;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.cid-roPOiOBqrR .card-front img {
-  height: 100%;
-  min-width: 100%;
-  width: auto;
-}
-.cid-roPOiOBqrR .card_back {
-  width: 100%;
-  height: 100%;
-  padding: 30px 30px;
-  color: #ffffff;
-  background-color: #55b4d4;
-  z-index: 1;
-  margin: 0;
-  text-align: center;
-  overflow: hidden;
-  -o-transform: rotateY(-180deg);
-  -ms-transform: rotateY(-180deg);
-  -moz-transform: rotateY(-180deg);
-  -webkit-transform: rotateY(-180deg);
-  transform: rotateY(-180deg);
-}
-.cid-roPOiOBqrR .card {
-  min-height: 300px;
-}
-.cid-roPOiOBqrR .card:hover .card-front {
-  z-index: 1;
-  -o-transform: rotateY(180deg);
-  -ms-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-}
-.cid-roPOiOBqrR .card:hover .card_back {
-  z-index: 2;
-  -o-transform: rotateY(0deg);
-  -ms-transform: rotateY(0deg);
-  -moz-transform: rotateY(0deg);
-  -webkit-transform: rotateY(0deg);
-  transform: rotateY(0deg);
-}
-.cid-roPOiOBqrR .builderCard .card_back {
-  border-bottom-left-radius: 100px;
-}
-.cid-roPOiOBqrR .builderCard .card_cont {
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidd;
-  -moz-backface-visibility: visible;
-  -webkit-backface-visibility: visible;
-  backface-visibility: visible;
-}
-.cid-roPOiOBqrR .mbr-section-title B {
-  color: #0f7699;
-}
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
   background: #0f7699;
@@ -5012,7 +4703,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #0f7699;
 }
 .cid-qTkzRZLJNu button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -5237,20 +4928,5 @@ body {
 }
 .cid-qTkzRZLJNu .nav-link:hover,
 .cid-qTkzRZLJNu .dropdown-item:hover {
-  color: #ffffff !important;
-}
-.cid-rog5cfv25E {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
-}
-.cid-rog5cfv25E P {
-  color: #767676;
-}
-.cid-rog5cfv25E H1 {
-  color: #0f7699;
-}
-.cid-rog5cfv25E .mbr-text,
-.cid-rog5cfv25E .mbr-section-btn {
-  color: #073b4c;
+  color: #0f7699 !important;
 }
